Fix font configuration to use correct Mintlify schema

--- a/custom.css
+++ b/custom.css
@@ -1,3 +1,6 @@
+/* Import Unit font from Adobe Typekit */
+@import url('https://use.typekit.net/vuf3cyd.css');
+
 /* Custom typography to match modem.dev */
 
 /* Headings */
