Force font-family via CSS with !important to override Mintlify defaults

--- a/custom.css
+++ b/custom.css
@@ -1,10 +1,15 @@
 /* Import Unit font from Adobe Typekit */
 @import url('https://use.typekit.net/vuf3cyd.css');
 
+/* Import Roboto from Google Fonts */
+@import url('https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap');
+
 /* Custom typography to match modem.dev */
 
 /* Headings */
 h1, h2, h3, h4 {
+  font-family: "unit", sans-serif !important;
+  font-weight: 500 !important;
   letter-spacing: -0.02em;
 }
 
@@ -22,6 +27,8 @@ h3 {
 
 /* Body text */
 p, li {
+  font-family: "Roboto", sans-serif !important;
+  font-weight: 400;
   letter-spacing: -0.01em;
   line-height: 1.7;
 }
